tests/grammar/invalid/core-recovery-missing-rbrace-01.vit
proc main() {
  let x = 1
